--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
   <title>Disneyland Information</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <style>
     body {
@@ -29,6 +27,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
+  <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
@@ -44,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="#">Disneyland Info</a>
+        <a class="navbar-brand" target="_blank" href="http://www.disney.com/">Disneyland Info</a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
@@ -221,19 +220,19 @@
 
     <div id="links">
       <h2>Links</h2>
-      <p class="lead">Learn more about Mt. Rainier by visiting these websites:</p>
+      <p class="lead">Learn more about Disneyland:</p>
       <ul class="links-list">
-        <li><a href="http://www.nps.gov/mora/index.htm">Mt. Rainier National Parks Page</a></li>
-        <li><a href="http://en.wikipedia.org/wiki/Mount_Rainier">Mt. Rainier Wikipedia Page</a></li>
-        <li><a href="http://visitrainier.com/">Mt. Rainier Tourism Page</a></li>
-        <li><a href="https://content.lib.washington.edu/warnerweb/essay.html">John Muir's Ascent of Mt. Rainier</a></li>
+        <li><a href="http://www.disney.com/" target="_blank">Disney.com</a></li>
+        <li><a href="https://disneyland.disney.go.com/?DISCID=DI_mtt_chrome_dropdown_dlr" target="_blank">Disneyland</a></li>
+        <li><a href="https://disneyland.disney.go.com/hotels/" target="_blank">Hotels</a></li>
+        <li><a href="https://disneyland.disney.go.com/passes/" target="_blank">Tickets and Prices </a></li>
       </ul>
     </div>
 
     <hr>
 
     <footer>
-      <p>Made by Jane Student in 2015. This page uses images and text from <a href="http://en.wikipedia.org/wiki/Mount_Rainier">The Wikipedia Mt. Rainier Page</a>.</p>
+      <p>Made by Kevin Hudson in 2016. This page uses images and text from <a href="http://www.disney.com/">The Disney Website</a>.</p>
     </footer>
   </div>
   <!-- /container -->
